# tflite-esp-fmnist

./: CMakeLists.txt  README.md  results.txt  sdkconfig.old  tcp_image_server.py
main/: CMakeLists.txt
main/inc/: DataProvider.h  PredictionHandler.h  PredictionInterpreter.h  micro_model.h  tcp_client.h  wifi.h
main/src/: DataProvider.cpp  PredictionHandler.cpp  PredictionInterpreter.cpp  main.cpp  main_functions.cpp  micro_model.cpp  tcp_client.c  wifi.c
test_data/: CMakeLists.txt
